--- a/login-layout3/src/main/webapp/layout/MyStyle.css
+++ b/login-layout3/src/main/webapp/layout/MyStyle.css
@@ -9,16 +9,14 @@
 	margin-bottom: 0;
 	border-radius: 0;
 }
-
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {
-	height: 450px
+.navbar-inverse {
+	border-color: #ccc;
 }
 
 /* Set gray background color and 100% height */
 .sidenav {
 	background-color: #f1f1f1;
-	height: 100%;
+	height: 700px;
 }
 
 /* Set black background color, white text and some padding */
@@ -29,14 +27,8 @@ footer {
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-	.sidenav {
-		height: auto;
-		padding: 15px;
-	}
-	.row.content {
-		height: auto;
-	}
+.viewcontentlist btn{
+	margin: 10px 10px 20px 15px;
 }
 
 .dropbtn {
@@ -94,7 +86,7 @@ footer {
 	border-style: solid;
 	border-width: 0px 0px 1px 0px;
 	margin: 0;
-	background: rgb(230, 255, 230);
+	background: #f1f1f1;
 	border-radius: 5px 5px 0px 0px;
 	padding: 10px;
 	border-color: rgb(207, 200, 200);
@@ -117,6 +109,6 @@ footer {
 	border-radius: 5 px;
 	padding: 10 px;
 }
-
-
-
+.viewcontentlist form {
+	margin: 10px 10px 20px 10px;
+}
